--- a/app/views/grades/index.html.erb
+++ b/app/views/grades/index.html.erb
@@ -1,5 +1,5 @@
 <div id="content" class="container">
-
+	
 	<header class="page-header">
 		<h1>Users</h1>
 		<ul class="nav nav-pills">
@@ -40,5 +40,7 @@
 			<% end %>
 		</section>
 	</div>
+
+	<a href="/grades/export">Export</a>
 
 </div>
