--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -113,7 +113,7 @@ section
 	margin-top:1em;
 }
 
-section h1, section h2, section h3
+section h1, section h2, section h3, section h4
 {
 	font-family:"Helvetica Neue", helvetica;
 	margin-bottom:1em;
@@ -146,6 +146,8 @@ section h3
 
 section h4
 {
+	font-size: 0.8em;
+	color: gray;
 	margin-bottom:20px;
 }
 
