--- a/app/views/grades/index.html.erb
+++ b/app/views/grades/index.html.erb
@@ -1,46 +1,27 @@
 <div id="content" class="container">
-	
+
 	<header class="page-header">
-		<h1>Users</h1>
-		<ul class="nav nav-pills">
-			<% Group.order(:name).all.each_with_index do |group,i| %>
-			<li <%= 'class="active"'.html_safe if i==0 %>><a href="#group<%= i %>" data-toggle="tab"><%= group.name %> (<%= group.users.count %>)</a></li>
-			<% end %>
-			<li <%= 'class="active"'.html_safe if Group.count == 0 %>><a href="#other" data-toggle="tab">Other (<%= @groupless.count %>)</a></li>
-			<li><a href="#done" data-toggle="tab">Done (<%= @done.count %>)</a></li>
-			<li><a href="#inactive" data-toggle="tab">Inactive (<%= @inactive.count %>)</a></li>
-			<li><a href="#admins" data-toggle="tab">Admins (<%= @admins.count %>)</a></li>
-			<li><a href="#import" data-toggle="tab">Import</a></li>
-		</ul>
+		<h1>Grading list</h1>
 	</header>
 
-	<div class="tab-content">
-		<% Group.order(:name).all.each_with_index do |group,i| %>
-		<section class="tab-pane <%= 'active' if i==0 %>" id="group<%= i %>">
-			<%= render partial: 'grade_table', locals: { users: group.users.where(active:true, done:false).order(:name) } %>
-		</section>
+	<table class="table table-bordered">
+		<tr>
+			<th>pset</th>
+			<th>name</th>
+			<th>id</th>
+			<th>submit date</th>
+			<th></th>
+		</tr>
+		
+		<% @submits.each do |submit| %>
+		<tr>
+			<td><%= submit.pset.name %></td>
+			<td><%= submit.user.name %></td>
+			<td><%= submit.user.uvanetid %></td>
+			<td><%= time_ago_in_words(submit.submitted_at) if submit.submitted_at %> ago</td>
+			<td><%= submit_grade_link(submit) %></td>
+		</tr>
 		<% end %>
-		<section class="tab-pane <%= 'active' if Group.count == 0 %>" id="other">
-			<%= render partial: 'grade_table', locals: { users: @groupless } %>
-		</section>
-		<section class="tab-pane" id="done">
-			<%= render partial: 'grade_table', locals: { users: @done } %>
-		</section>
-		<section class="tab-pane" id="inactive">
-			<%= render partial: 'grade_table', locals: { users: @inactive } %>
-		</section>
-		<section class="tab-pane" id="admins">
-			<%= render partial: 'grade_table', locals: { users: @admins } %>
-		</section>
-		<section class="tab-pane" id="import">
-			<p>Paste all data lines from a .xls datanose user export.</p>
-			<%= form_tag course_import_groups_path, :method => :post do %>
-			<textarea name="paste" class="form-control"></textarea>
-			<p><input type="submit" class="btn"></p>
-			<% end %>
-		</section>
-	</div>
-
-	<a href="/grades/export">Export</a>
-
+	</ul>
+	
 </div>
