--- a/app/views/grades/new.html.erb
+++ b/app/views/grades/new.html.erb
@@ -1,7 +1,7 @@
 <div id="content" class="container">
 
 	<header class="page-header">
-		<h1>Grading <small><%= @submit.pset.name %> by <%= @submit.user.name %></small></h1>
+		<h1>Grading <small><%= @submit.pset.name %> by <%= @submit.user.name %> / <%= @grade.submit.user.uvanetid %></small></small></h1>
 	</header>
 
 	<%= render 'form' %>
