--- a/app/views/grades/_form.html.erb
+++ b/app/views/grades/_form.html.erb
@@ -1,5 +1,9 @@
 <%= form_for(@grade, url: submit_grade_path(@grade.submit)) do |f| %>
 
+<% if is_admin? %>
+<%= link_to 'Put into grading list', course_touch_submit_url(submit_id: @submit.id), method: :post %>
+<% end %>
+
 <% if @grade.errors.any? %>
 <div id="error_explanation">
 	<h2><%= pluralize(@grade.errors.count, "error") %> prohibited this grade from being saved:</h2>
@@ -17,7 +21,7 @@
 	<div class="col-lg-2">
 		<div class="field">
 			<%= f.label :grader %><br />
-			<%= f.text_field :grader, class: 'form-control', disabled: true, value: User.where(uvanetid: @grade.grader).first.name %>
+			<%= f.text_field :grader, class: 'form-control', disabled: true, value: @grade.grader_name %>
 		</div>
 		<div class="field">
 			<%= f.label :scope %><br />
