--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -37,6 +37,11 @@
 					<li><%= link_to '<i class="glyphicon glyphicon-download-alt"></i> Update courseware...'.html_safe, course_import_path, method: :post %></li>
 					<li><%= link_to '<i class="glyphicon glyphicon-list-alt"></i> Grading list'.html_safe, grades_path %></li>
 					<li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> Manage students'.html_safe, course_grades_path %></li>
+					<% if Settings.public_grades %>
+					<li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Grades are public, hide now'.html_safe, course_toggle_public_grades_path, method: :post %></li>
+					<% else %>
+					<li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Grades are hidden, make public'.html_safe, course_toggle_public_grades_path, method: :post %></li>
+					<% end %>
 					<li class="divider"></li>
 					<li><%= link_to '<i class="glyphicon glyphicon-user"></i> Admins'.html_safe, admin_admins_path %></li>
 					<li><%= link_to '<i class="glyphicon glyphicon-asterisk"></i> Manage dropbox'.html_safe, dropbox_path %></li>
