--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -117,7 +117,7 @@ section h1, section h2, section h3, section h4
 {
 	font-family:"Helvetica Neue", helvetica;
 	margin-bottom:1em;
-	margin-top:20px;
+	margin-top:1.2em;
 	line-height:1em;
 }
 
