--- a/app/views/course/_grade_table.html.erb
+++ b/app/views/course/_grade_table.html.erb
@@ -12,8 +12,8 @@
 
 	<% users.includes(:submits).each do |user| %>
 	<tr>
-		<td><%= check_box_tag "active#{user.id}", 'yes', user.active, :onclick => "$.post('/grades/enable', { id:'#{user.id}', active:$(this).is(':checked') });" %></td>
-		<td><%= check_box_tag "done#{user.id}", 'yes', user.done, :onclick => "$.post('/grades/done', { id:'#{user.id}', done:$(this).is(':checked') });" %></td>
+		<td><%= check_box_tag "active#{user.id}", 'yes', user.active, :onclick => "$.post('/course/enable', { id:'#{user.id}', active:$(this).is(':checked') });" %></td>
+		<td><%= check_box_tag "done#{user.id}", 'yes', user.done, :onclick => "$.post('/course/done', { id:'#{user.id}', done:$(this).is(':checked') });" %></td>
 		<td>
 			<% if user.mail %>
 			<%= link_to user.name, 'mailto:' + user.mail %>
@@ -26,12 +26,12 @@
 		<td>
 			<% if submitted = user.submits.where(pset_id: pset.id).first %>
 				<% if submitted.grade and not submitted.grade.grade.blank? %>
-				<%= link_to "#{submitted.grade.grade}", edit_submit_grade_url(submit_id: submitted.id), class: 'btn btn-primary btn-xs' %>
+				<%= link_to "#{submitted.grade.grade}", grade_form_path(user_id: user.id, pset_id: pset.id), class: 'btn btn-primary btn-xs' %>
 				<% else %>
-				<%= link_to 'sub', new_submit_grade_url(submit_id: submitted.id), class: 'btn btn-default btn-xs' %>
+				<%= link_to 'sub', grade_form_path(user_id: user.id, pset_id: pset.id), class: 'btn btn-default btn-xs' %>
 				<% end %>
 			<% else %>
-				<%= link_to 'no', grades_create_submit_url(user_id: user.id, pset_id: pset.id), method: :post, class:'btn btn-default btn-xs auto-hide', confirm:'Would you like to enter a grade for this unsubmitted pset?' %>
+				<%= link_to 'no', grade_form_path(user_id: user.id, pset_id: pset.id), class:'btn btn-default btn-xs auto-hide', confirm:'Would you like to enter a grade for this unsubmitted pset?' %>
 			<% end %>
 		</td>
 		<% end %>
