--- a/app/views/grading/index.html.erb
+++ b/app/views/grading/index.html.erb
@@ -21,7 +21,7 @@
 			<td><%= submit.user.uvanetid %></td>
 			<td><%= time_ago_in_words(submit.submitted_at) if submit.submitted_at %> ago</td>
 			<td><%= submit.grade.grade if submit.grade %></td>
-			<td><%= submit_grade_link(submit) %></td>
+			<td><%= link_to 'grade', grade_form_path(user_id: submit.user_id, pset_id: submit.pset_id) %></td>
 		</tr>
 		<% end %>
 	</ul>
