--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -42,6 +42,11 @@
 					<% else %>
 					<li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Grades are hidden, make public'.html_safe, course_toggle_public_grades_path, method: :post %></li>
 					<% end %>
+					<% if Settings.allow_grading %>
+					<li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Grading is allowed'.html_safe, course_toggle_grading_allowed_path, method: :post %></li>
+					<% else %>
+					<li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Grading is not allowed'.html_safe, course_toggle_grading_allowed_path, method: :post %></li>
+					<% end %>
 					<li class="divider"></li>
 					<li><%= link_to '<i class="glyphicon glyphicon-user"></i> Admins'.html_safe, admin_admins_path %></li>
 					<li><%= link_to '<i class="glyphicon glyphicon-asterisk"></i> Manage dropbox'.html_safe, dropbox_path %></li>
