--- a/app/views/course/grades.html.erb
+++ b/app/views/course/grades.html.erb
@@ -16,17 +16,17 @@
 	<div class="tab-content">
 		<% Group.order(:name).all.each_with_index do |group,i| %>
 		<section class="tab-pane <%= 'active' if i==0 %>" id="group<%= i %>">
-			<%= render partial: 'grade_table', locals: { users: group.users.where(active:true, done:false).order(:name) } %>
+			<%= render partial: 'grade_table', locals: { users: group.users.where(active:true, done:false).order(:name), psets: @psets } %>
 		</section>
 		<% end %>
 		<section class="tab-pane <%= 'active' if Group.count == 0 %>" id="other">
-			<%= render partial: 'grade_table', locals: { users: @groupless } %>
+			<%= render partial: 'grade_table', locals: { users: @groupless, psets: @psets } %>
 		</section>
 		<section class="tab-pane" id="inactive">
-			<%= render partial: 'grade_table', locals: { users: @inactive } %>
+			<%= render partial: 'grade_table', locals: { users: @inactive, psets: @psets } %>
 		</section>
 		<section class="tab-pane" id="admins">
-			<%= render partial: 'grade_table', locals: { users: @admins } %>
+			<%= render partial: 'grade_table', locals: { users: @admins, psets: @psets } %>
 		</section>
 		<section class="tab-pane" id="import">
 			<p>Paste all data lines from a .xls datanose user export.</p>
