--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -46,27 +46,26 @@
 					<% end %>
 					<% if is_admin? %>
 					<li><%= link_to '<i class="glyphicon glyphicon-download-alt"></i> Update courseware...'.html_safe, course_import_path, method: :post %></li>
-					<li><%= link_to '<i class="glyphicon glyphicon-list-alt"></i> Grading list'.html_safe, grading_path %></li>
-					<li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> Manage students'.html_safe, course_grades_path %></li>
+					<li><%= link_to '<i class="glyphicon glyphicon-pencil"></i> Settings'.html_safe, admin_path %></li>
+					<li class="divider"></li>
+					<li><%= link_to '<i class="glyphicon glyphicon-th"></i> Manage students'.html_safe, course_grades_path %></li>
+					<li><%= link_to '<i class="glyphicon glyphicon-list"></i> Grading list'.html_safe, grading_path %></li>
 					<% if Settings.public_grades %>
-					<li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Grades are public, hide now'.html_safe, course_toggle_public_grades_path, method: :post %></li>
+					<li><%= link_to '<i class="glyphicon glyphicon-eye-open"></i> Grades are public'.html_safe, course_toggle_public_grades_path, method: :post %></li>
 					<% else %>
-					<li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Grades are hidden, make public'.html_safe, course_toggle_public_grades_path, method: :post %></li>
+					<li><%= link_to '<i class="glyphicon glyphicon-eye-close"></i> Grades are hidden'.html_safe, course_toggle_public_grades_path, method: :post %></li>
 					<% end %>
 					<% if Settings.allow_grading %>
-					<li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Grading is allowed'.html_safe, course_toggle_grading_allowed_path, method: :post %></li>
+					<li><%= link_to '<i class="glyphicon glyphicon-thumbs-up"></i> Grading is allowed'.html_safe, course_toggle_grading_allowed_path, method: :post %></li>
 					<% else %>
-					<li><%= link_to '<i class="glyphicon glyphicon-bullhorn"></i> Grading is not allowed'.html_safe, course_toggle_grading_allowed_path, method: :post %></li>
+					<li><%= link_to '<i class="glyphicon glyphicon-thumbs-down"></i> Grading is not allowed'.html_safe, course_toggle_grading_allowed_path, method: :post %></li>
 					<% end %>
-					<li class="divider"></li>
-					<li><%= link_to '<i class="glyphicon glyphicon-user"></i> Admins'.html_safe, admin_admins_path %></li>
-					<li><%= link_to '<i class="glyphicon glyphicon-asterisk"></i> Manage dropbox'.html_safe, dropbox_path %></li>
 					<li class="divider"></li>
 					<% end %>
 					<% if is_assistant? %>
 					<li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading'.html_safe, grading_path %></li>
 					<% else %>
-					<li><%= link_to '<i class="glyphicon glyphicon-user"></i> Grades'.html_safe, profile_grades_path %></li>
+					<li><%= link_to '<i class="glyphicon glyphicon-list"></i> Grades'.html_safe, profile_grades_path %></li>
 					<% end %>
 					<li><%= link_to '<i class="glyphicon glyphicon-ban-circle"></i> Logout'.html_safe, profile_logout_path %></li>
 				</ul>
