upgrade bootstrap, simplify

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,9 @@
 	<![endif]-->
 
 	<%= render "layouts/navbar" %>
-
+	<div class="container">
 	<%= yield %>
+	</div>
 
 	<% if @page %>
 	<footer>
