--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -1,5 +1,3 @@
-@import "bootstrap.min"; /* import of manual download of bootstrap 3.0 rc2 */
-
 body
 {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -9,11 +7,6 @@ body
 	background-color: #eee;
 }
 
-body > .row /* shouldn't be necessary according to bootstrap docs? */
-{
-	margin:0;
-}
-
 /****************************************************************************
  *  main navigation bar
  *
@@ -21,8 +14,16 @@ body > .row /* shouldn't be necessary according to bootstrap docs? */
 
 .navbar
 {
-	background-color: #449E1F;
 	margin-bottom:0;
+
+	background: #258dc8; /* Old browsers */
+	background: -moz-linear-gradient(top, #258dc8 0%, #499bc6 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#258dc8), color-stop(100%,#499bc6)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #258dc8 0%,#499bc6 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #258dc8 0%,#499bc6 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #258dc8 0%,#499bc6 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #258dc8 0%,#499bc6 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#258dc8', endColorstr='#499bc6',GradientType=0 ); /* IE6-9 */
 }
 
 .navbar .navbar-brand
@@ -30,15 +31,27 @@ body > .row /* shouldn't be necessary according to bootstrap docs? */
 	color:#000;
 }
 
+.navbar .navbar-right
+{
+	margin-right:0 ! important;
+}
+
 .navbar .glyphicon
 {
 	font-size:12px;
-	display:inline-block;
-	margin-bottom:-4px;
-	vertical-align:center;
 }
 
-.navbar a, .navbar-nav > li > a, .navbar-nav > .open > a, .navbar-nav > .open > a:hover, .navbar-nav > .open > a:focus
+.navbar .nav > li > a:hover,
+.navbar .nav > li > a:focus
+{
+	background-color:#1D76A9;
+}
+
+.navbar a,
+.navbar-nav > li > a,
+.navbar-nav > .open > a,
+.navbar-nav > .open > a:hover,
+.navbar-nav > .open > a:focus
 {
 	color:#FFF;
 }
@@ -54,12 +67,16 @@ body > .row /* shouldn't be necessary according to bootstrap docs? */
 
 .navbar .dropdown.open .dropdown-toggle
 {
-	background-color:#8DB77A;
+	background-color:#155A82;
 }
 
 .navbar .dropdown-menu > li > a
 {
 	line-height:1.7;
+}
+
+.navbar-toggle .icon-bar {
+  background-color: white;
 }
 
 /****************************************************************************
@@ -69,10 +86,9 @@ body > .row /* shouldn't be necessary according to bootstrap docs? */
 
 #content
 {
-	margin: 2em auto;
+	margin-top: 50px;
 	background-color: #fff;
-	padding:2em 4em;
-	border:1px solid  #D9D9D9;
+	padding:1em 5%;
 }
 
 #content .nav
@@ -80,14 +96,9 @@ body > .row /* shouldn't be necessary according to bootstrap docs? */
 	margin-bottom:0;
 }
 
-#content .row
-{
-/*	margin:1em 0;*/
-}
-
 #content header .nav > li > a /* the pills below the page's H1 */
 {
-	padding:5px 10px;
+	padding:7px 12px;
 }
 
 #content > #submitted_pset
@@ -158,8 +169,8 @@ section dd
 
 section ul, section ol
 {
-  padding: 0;
-  margin: 0 0 10px 25px;
+	padding: 0;
+	margin: 0 0 10px 25px;
 }
 
 section > ul, section > ol /* only top-level lists get this wide a margin */
