--- a/app/views/course/grades_tracks.html.erb
+++ b/app/views/course/grades_tracks.html.erb
@@ -1,32 +1,33 @@
 <div id="content" class="container">
 	
-	<header class="page-header">
+	<header class="page-header" style="border-bottom:0">
 		<h1>Students</h1>
-		<ul class="nav nav-pills">
-			<% @groups.each_with_index do |group,i| %>
-			<li <%= 'class="active"'.html_safe if i==0 %>><a href="#group<%= i %>" data-toggle="tab"><%= group[:title] %> (<%= group[:users].count %>)</a></li>
-			<% end %>
-			<li <%= 'class="active"'.html_safe if @groups.size == 0 %>><a href="#other" data-toggle="tab">Not started (<%= @groupless.count %>)</a></li>
-			<li><a href="#inactive" data-toggle="tab">Inactive (<%= @inactive.count %>)</a></li>
-			<li><a href="#admins" data-toggle="tab">Admins (<%= @admins.count %>)</a></li>
-		</ul>
 	</header>
+
+	<ul class="nav nav-tabs">
+		<% @groups.each_with_index do |group,i| %>
+		<li <%= 'class="active"'.html_safe if i==0 %>><a href="#group<%= i %>" data-toggle="tab"><%= group[:title] %> (<%= group[:users].count %>)</a></li>
+		<% end %>
+		<li <%= 'class="active"'.html_safe if @groups.size == 0 %>><a href="#other" data-toggle="tab">Not started (<%= @groupless.count %>)</a></li>
+		<li><a href="#inactive" data-toggle="tab">Inactive (<%= @inactive.count %>)</a></li>
+		<li><a href="#admins" data-toggle="tab">Admins (<%= @admins.count %>)</a></li>
+	</ul>
 
 	<div class="tab-content">
 		<% @groups.each_with_index do |group,i| %>
-		<section class="tab-pane <%= 'active' if i==0 %>" id="group<%= i %>">
+		<div class="tab-pane <%= 'active' if i==0 %>" id="group<%= i %>">
 			<%= render partial: 'grade_table', locals: { users: group[:users], psets: group[:psets] } %>
-		</section>
+		</div>
 		<% end %>
-		<section class="tab-pane <%= 'active' if @groups.size == 0 %>" id="other">
+		<div class="tab-pane <%= 'active' if @groups.size == 0 %>" id="other">
 			<%= render partial: 'grade_table', locals: { users: @groupless, psets: @psets } %>
-		</section>
-		<section class="tab-pane" id="inactive">
+		</div>
+		<div class="tab-pane" id="inactive">
 			<%= render partial: 'grade_table', locals: { users: @inactive, psets: @psets } %>
-		</section>
-		<section class="tab-pane" id="admins">
+		</div>
+		<div class="tab-pane" id="admins">
 			<%= render partial: 'grade_table', locals: { users: @admins, psets: @psets } %>
-		</section>
+		</div>
 	</div>
 	
 	<%= link_to "Show done", { done:true } %>
