--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -13,4 +13,6 @@
 
 	<%= link_to '<i class="glyphicon glyphicon-user"></i> Import Users'.html_safe, admin_import_users_path, class:'btn btn-default btn-lg' %>
 
+	<%= link_to '<i class="glyphicon glyphicon-lock"></i> Edit API Key'.html_safe, admin_api_path, class:'btn btn-default btn-lg' %>
+
 </div>
