--- a/app/views/course/grades_tracks.html.erb
+++ b/app/views/course/grades_tracks.html.erb
@@ -16,17 +16,17 @@
 	<div class="tab-content">
 		<% @groups.each_with_index do |group,i| %>
 		<div class="tab-pane <%= 'active' if i==0 %>" id="group<%= i %>">
-			<%= render partial: 'grade_table', locals: { users: group[:users], psets: group[:psets] } %>
+			<%= render partial: 'grade_table', locals: { users: group[:users], psets: group[:psets], track: group[:track] } %>
 		</div>
 		<% end %>
 		<div class="tab-pane <%= 'active' if @groups.size == 0 %>" id="other">
-			<%= render partial: 'grade_table', locals: { users: @groupless, psets: @psets } %>
+			<%= render partial: 'grade_table', locals: { users: @groupless, psets: @psets, track: nil } %>
 		</div>
 		<div class="tab-pane" id="inactive">
-			<%= render partial: 'grade_table', locals: { users: @inactive, psets: @psets } %>
+			<%= render partial: 'grade_table', locals: { users: @inactive, psets: @psets, track: nil } %>
 		</div>
 		<div class="tab-pane" id="admins">
-			<%= render partial: 'grade_table', locals: { users: @admins, psets: @psets } %>
+			<%= render partial: 'grade_table', locals: { users: @admins, psets: @psets, track: nil } %>
 		</div>
 	</div>
 	
