--- a/app/views/course/grades_tracks.html.erb
+++ b/app/views/course/grades_tracks.html.erb
@@ -33,3 +33,7 @@
 	<%= link_to "Show done", { done:true } %>
 	
 </div>
+
+<script type="text/javascript" charset="utf-8">
+	$('.best_in_place').best_in_place()
+</script>
