--- a/app/views/admin/stats.html.erb
+++ b/app/views/admin/stats.html.erb
@@ -1,7 +1,8 @@
 <% @tracks.each do |track| %>
 <%= track[0] %><br>
 <ul>
-	<li>Stil active: <%= track[1] %></li>
+	<li>Active: <%= track[1] %></li>
 	<li>Done: <%= track[2] %></li>
+	<li>MIA: <%= track[3] %></li>
 </ul>
 <% end %>
