show recent submission time in grad

--- a/app/views/grades/form.html.erb
+++ b/app/views/grades/form.html.erb
@@ -2,13 +2,13 @@
 
 	<header class="page-header">
 		<h1>Grading <small><%= @pset.name %> by <%= @user.name %> / <%= @user.uvanetid %></small></small></h1>
+		<% if is_admin? and @submit %>
+		<%= link_to 'Put into grading list', course_touch_submit_url(submit_id: @submit.id), method: :post %>
+		<% end %>
+		/ Latest submission time: <%= time_ago_in_words(@submit.submitted_at) if @submit.submitted_at %> ago
 	</header>
 
 	<%= form_for(@grade, url: grade_save_path(user_id: @user.id, pset_id: @pset.id), method: :post) do |f| %>
-
-	<% if is_admin? and @submit %>
-	<%= link_to 'Put into grading list', course_touch_submit_url(submit_id: @submit.id), method: :post %>
-	<% end %>
 
 	<% if @grade.errors.any? %>
 	<div id="error_explanation">
