Added a few options to filter on (hardcoded)

--- a/app/views/course/grades_tracks.html.erb
+++ b/app/views/course/grades_tracks.html.erb
@@ -10,6 +10,12 @@
 				<option value="">all</option>
 				<option value="sem1">sem1</option>
 				<option value="sem2">sem2</option>
+				<option value="sem2">per1</option>
+				<option value="sem2">per2</option>
+				<option value="sem2">per3</option>
+				<option value="sem2">per4</option>
+				<option value="sem2">per5</option>
+				<option value="sem2">per6</option>
 			</select>
 	
 			Status:
