add student to track

--- a/app/views/course/_grade_table.html.erb
+++ b/app/views/course/_grade_table.html.erb
@@ -1,4 +1,4 @@
-<table id="grade-table" class="table table-condensed table-">
+<table id="grade-table" class="table table-condensed">
 
 	<tr>
 		<th>Name</th>
