--- a/app/views/course/_grade_table.html.erb
+++ b/app/views/course/_grade_table.html.erb
@@ -6,6 +6,24 @@
 		<% psets.each do |pset| %>
 		<th><%= pset.name %></th>
 		<% end %>
+		<% if track %>
+		<th>
+			<form method="get" accept-charset="utf-8">
+				<select name="term" id="term" onchange="this.form.submit();" size="1">
+					<%= options_from_collection_for_select Registration.select("distinct term"), :term, :term, selected:params[:term] %>
+				</select>
+				<%= hidden_field_tag "status", params[:status] %>
+			</form>
+		</th>
+		<th>
+			<form method="get" accept-charset="utf-8">
+				<%= hidden_field_tag "term", params[:term] %>
+				<select name="status" id="status" onchange="this.form.submit();" size="1">
+					<%= options_from_collection_for_select Registration.select("distinct status"), :status, :status, selected:params[:status] %>
+				</select>
+			</form>
+		</th>
+		<% end %>
 	</tr>
 
 	<% users.each do |user| %>
