--- a/app/views/grades/form.html.erb
+++ b/app/views/grades/form.html.erb
@@ -9,6 +9,8 @@
 	</header>
 
 	<%= form_for(@grade, url: grade_save_path(user_id: @user.id, pset_id: @pset.id), method: :post) do |f| %>
+	
+	<%= hidden_field_tag :referer, request.referer %>
 
 	<% if @grade.errors.any? %>
 	<div id="error_explanation">
