reload only after bla

--- a/app/views/course/grades_tracks.html.erb
+++ b/app/views/course/grades_tracks.html.erb
@@ -39,8 +39,12 @@
 		x = prompt("Student id?");
 		if(x)
 		{
-			$.post("/course/add_student", { track_id: track_id, student_id: x });
-			location.reload();
+			$.post("/course/add_student", { track_id: track_id, student_id: x },
+				function()
+				{
+					location.reload();
+				}
+			);
 		}
 	}
 </script>
