--- a/app/views/grade_mailer/new_mail.text.erb
+++ b/app/views/grade_mailer/new_mail.text.erb
@@ -1,4 +1,4 @@
-Hey! New feedback has been entered for <%= @course_name %>, item <%= @grade_name %>.
+Hey! New feedback has been entered for <%= @course_name %>, item "<%= @grade_name %>".
 
 ---------------------------------------------------------------------
 
