oh well, do it in the grading list too

--- a/app/views/grading/index.html.erb
+++ b/app/views/grading/index.html.erb
@@ -19,7 +19,7 @@
 			<td><%= submit.pset.name %></td>
 			<td><%= submit.user.name %></td>
 			<td><%= submit.user.uvanetid %></td>
-			<td><%= time_ago_in_words(submit.submitted_at) if submit.submitted_at %> ago</td>
+			<td><% if submit.submitted_at %><%= submit.submitted_at.to_formatted_s(:short) %> (<%= time_ago_in_words(submit.submitted_at) %> ago)<% end %></td>
 			<td><%= submit.grade.grade if submit.grade %></td>
 			<td><%= link_to 'grade', grade_form_path(user_id: submit.user_id, pset_id: submit.pset_id) %></td>
 		</tr>
