--- a/app/views/course/export_grades.html.erb
+++ b/app/views/course/export_grades.html.erb
@@ -1,5 +1,5 @@
 <div id="content" class="container">
 
-<%= render partial: 'grade_table', locals: { users: @users, psets: @psets } %>
+<%= render partial: 'grade_table', locals: { users: @users, psets: @psets, track: nil } %>
 
 </div>
