--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -7,7 +7,7 @@
 
 	<%= link_to '<span class="glyphicon glyphicon-fire"></span> Edit Admins'.html_safe, admin_admins_path, class:'btn btn-default btn-lg' %>
 
-	<%= link_to '<i class="glyphicon glyphicon-gift"></i> Manage Dropbox'.html_safe, dropbox_path, class:'btn btn-default btn-lg' %>
+	<%= link_to '<i class="glyphicon glyphicon-gift"></i> Manage Dropbox'.html_safe, admin_dropbox_path, class:'btn btn-default btn-lg' %>
 
 	<%= link_to '<i class="glyphicon glyphicon-briefcase"></i> Export Grades'.html_safe, course_export_grades_path, class:'btn btn-default btn-lg' %>
 
