--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -7,12 +7,10 @@
 
 	<%= link_to '<span class="glyphicon glyphicon-fire"></span> Edit Admins'.html_safe, admin_admins_path, class:'btn btn-default btn-lg' %>
 
-	<%= link_to '<i class="glyphicon glyphicon-gift"></i> Manage Dropbox'.html_safe, admin_dropbox_path, class:'btn btn-default btn-lg' %>
+	<%= link_to '<i class="glyphicon glyphicon-gift"></i> Manage Dropbox'.html_safe, admin_dropbox_path, class:'btn btn-default btn-lg' if Dropbox.available? %>
 
-	<%= link_to '<i class="glyphicon glyphicon-briefcase"></i> Export Grades'.html_safe, course_export_grades_path, class:'btn btn-default btn-lg' %>
+	<%= link_to '<i class="glyphicon glyphicon-briefcase"></i> Export Grades'.html_safe, admin_users_export_grades_path, class:'btn btn-default btn-lg' %>
 
-	<%= link_to '<i class="glyphicon glyphicon-user"></i> Import Users'.html_safe, admin_import_users_path, class:'btn btn-default btn-lg' %>
-
-	<%= link_to '<i class="glyphicon glyphicon-lock"></i> Edit API Key'.html_safe, admin_api_path, class:'btn btn-default btn-lg' %>
+	<%= link_to '<i class="glyphicon glyphicon-user"></i> Import Users'.html_safe, admin_users_import_path, class:'btn btn-default btn-lg' %>
 
 </div>
