--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		</button>
-		<a href="/" class="navbar-brand"><span class="glyphicon glyphicon-home"></span> <%= Settings.short_course_name %></a>
+		<a href="/" class="navbar-brand hidden-sm"><span class="glyphicon glyphicon-home"></span> <%= Settings.short_course_name %></a>
 	</div>
 
 	<div class="collapse navbar-collapse navbar-ex1-collapse">
