--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,56 +1,8 @@
 <div class="row">
-	<div class="col-md-1" id="schedule-column">
+	
+	<div class="col-sm-10 col-sm-offset-1" id="content">
+		<%= render 'content' %>
 	</div>
-	<div class="col-md-10" id="content">
-
-		<% if @submitted and date = @page.pset.submit_from(current_user).submitted_at %>
-		<div id="submitted_pset" class="alert alert-success">
-			You have submitted this problem set <%= time_ago_in_words(date) %> ago.
-		</div>
-		<% end %>
-
-		<header class="page-header">
-			<h1><%= title %></h1>
-			<% if @page.pset or @page.subpages.count > 1 %>
-			<ul class="nav nav-pills">
-				<% @page.subpages.each_with_index do |subpage, index| %>
-				<li class="<%= 'active' if index == 0 %>">
-					<a href="#<%= subpage.slug %>" data-target="#<%= subpage.slug %>-content" data-toggle="tab"><%= subpage.title %></a>
-				</li>
-				<% end %>
-				<% if logged_in? and @page.pset %>
-				<li>
-				  <a href="#submit" data-target="#submit-content" data-toggle="tab">Submit <%= submitted_icon %></a>
-				</li>
-				<% end %>
-			</ul>
-			<% end %>
-		</header>
-
-
-		<%= form_tag_if(logged_in? && @page.pset, page_submit_url, { :multipart => true, :id => "page_form" }) do %>
-		<%= hidden_field_tag :page_id, @page.id %>
-		<div class="tab-content">
-
-			<% @page.subpages.each_with_index do |subpage, index| %>
-			<section class="tab-pane markdown <%= 'active' if index == 0 %>" id="<%= subpage.slug %>-content">
-				<%= markdown(subpage.content, @page) %>
-			</section>
-			<% end %>
-
-			<% if logged_in? and @page.pset %>
-			<section class="tab-pane markdown" id="submit-content">
-				<%= render 'submit_tab' %>
-			</section>
-			<% end %>
-		</div>
-		<% end %>
-	</div>
-
-	<% if logged_in? %>
-	<div class="col-md-1" id="comments-column">
-	</div>
-	<% end %>
 
 </div>
 
