--- a/app/views/grades/form.html.erb
+++ b/app/views/grades/form.html.erb
@@ -1,4 +1,4 @@
-<div id="content" class="container">
+<div id="content">
 
 	<header class="page-header">
 		<h1>Grading <small><%= @pset.name %> by <%= @user.name %> / <%= @user.uvanetid %></small></small></h1>
@@ -7,10 +7,11 @@
 		<% end %>
 		/ Latest submission time:
 		<% if @submit and @submit.submitted_at %>
-			<%= @submit.submitted_at.to_formatted_s(:short) %> (<%= time_ago_in_words(@submit.submitted_at) %> ago)
+		<%= @submit.submitted_at.to_formatted_s(:short) %> (<%= time_ago_in_words(@submit.submitted_at) %> ago)
 		<% else %>
-			never
+		never
 		<% end %>
+		/ grader: <%= @grade.grader_name %>
 	</header>
 
 	<%= form_for(@grade, url: grade_save_path(user_id: @user.id, pset_id: @pset.id), method: :post) do |f| %>
@@ -31,50 +32,63 @@
 
 	<div class="row">
 
-		<div class="col-lg-2">
-			<div class="field">
-				<%= f.label :grader %><br />
-				<%= f.text_field :grader, class: 'form-control', disabled: true, value: @grade.grader_name %>
+		<div class="col-xs-8">
+			<div class="row">
+				<div class="col-xs-12">
+					<div class="field">
+						<%= f.label :comments, "Feedback" %><br />
+						<%= f.text_area :comments, class: 'form-control' %>
+					</div>
+				</div>
 			</div>
-			<div class="field">
-				<%= f.label :scope %><br />
-				<%= f.number_field :scope, class: 'form-control' %>
+
+			<div class="row">
+				<div class="col-xs-2">
+					<%= f.label :scope %>
+					<%= f.number_field :scope, class: 'form-control' %>
+				</div>
+				<div class="col-xs-2">
+					<div class="form-group">
+						<%= f.label :correctness %>
+						<%= f.number_field :correctness, class: 'form-control' %>
+					</div>
+				</div>
+				<div class="col-xs-2">
+					<div class="form-group">
+						<%= f.label :design %>
+						<%= f.number_field :design, class: 'form-control' %>
+					</div>
+				</div>
+				<div class="col-xs-2">
+					<div class="form-group">
+						<%= f.label :style %>
+						<%= f.number_field :style, class: 'form-control' %>
+					</div>
+				</div>
+				<div class="col-xs-2">
+					<div class="form-group">
+						<%= f.label :grade %>
+						<%= f.number_field :grade, class: 'form-control' %>
+					</div>
+				</div>
+				<div class="col-xs-2">
+					<%= f.label 'Pass' %><br>
+					<button class="btn btn-default" type="button" id="pass-btn">P</button>
+					<button class="btn btn-default" type="button" id="fail-btn">F</button>
+				</div>
 			</div>
-			<div class="field">
-				<%= f.label :correctness %><br />
-				<%= f.number_field :correctness, class: 'form-control' %>
-			</div>
-			<div class="field">
-				<%= f.label :design %><br />
-				<%= f.number_field :design, class: 'form-control' %>
-			</div>
-			<div class="field">
-				<%= f.label :style %><br />
-				<%= f.number_field :style, class: 'form-control' %>
-			</div>
-			<div class="field">
-				<%= f.label :grade %><br />
-					<%= f.number_field :grade, class: 'form-control' %>
-				<div class="input-group">
-					<span class="input-group-btn">
-						<button class="btn btn-default" type="button" id="pass-btn">Pass</button>
-						<button class="btn btn-default" type="button" id="fail-btn">Fail</button>
-					</span>
+
+			<div class="row">
+				<div class="col-xs-12">
+					<div class="actions">
+						<%= f.submit class: 'btn btn-default form-control' %>
+					</div>
 				</div>
 			</div>
 		</div>
 	
-		<div class="col-lg-5">
-			<div class="field">
-				<%= f.label :comments, "Feedback" %><br />
-				<%= f.text_area :comments, class: 'form-control' %>
-			</div>
-			<div class="actions">
-				<%= f.submit class: 'btn btn-default form-control' %>
-			</div>
-		</div>
-	
-		<div class="col-lg-5">
+		
+		<div class="col-xs-4">
 			<% @grades.each do |grade| %>
 			<h2><%= grade.submit.pset.name %></h2>
 			<table class="table table-bordered" style="width:auto">
@@ -92,7 +106,7 @@
 		</div>
 	
 	</div>
-
+	
 	<% end %>
 	
 	<hr>
