--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -422,7 +422,12 @@ footer
 	margin-top:15px;
 	margin-bottom:15px;
 	text-align: center; 
-	font-size:smaller;
+	font-size:x-small;
+}
+
+footer img
+{
+	vertical-align:-4px;
 }
 
 /****************************************************************************
