--- a/app/views/page/_schedule.html.erb
+++ b/app/views/page/_schedule.html.erb
@@ -1,20 +1,25 @@
 <% @registrations.each do |registration| %>
 
-<h3><%= registration.track.name %><br><%= registration.schedule_span.name %></h4>
+<div id="heading">
 
-<% @week_contents = registration.schedule_span.content %>
-<p id="description" ><%= @week_contents.delete('description') %></p>
-<ul id="contents" class="list-unstyled">
+	<h5><%= registration.track.name %><br><%= registration.schedule_span.name %></h5>
+
+	<% @week_contents = registration.schedule_span.content %>
+	<p id="description" ><%= @week_contents.delete('description') %></p>
+
+</div>
+
+<div id="contents" class="list-group">
 	<% @week_contents.each do |item, link| %>
-	<li><a href="<%= link %>" ><%= item.sub('[', '<span class="label label-info">').sub(']', '</span>').html_safe %></a></li>
+	<a href="<%= link %>" class="list-group-item"><%= item.sub('[', '<span class="label label-info">').sub(']', '</span>').html_safe %></a>
 	<% end %>
-</ul>
+</div>
 
 <div class="btn-group btn-group-justified">
-	<%= link_to({ action: :prev_in_schedule, registration_id: registration.id }, { method: :post, class: 'btn btn-xs' }) do %>
+	<%= link_to({ action: :prev_in_schedule, registration_id: registration.id }, { method: :post, class: 'btn btn-xs btn-info' }) do %>
 	<span class='glyphicon glyphicon-arrow-left'></span>
 	<% end %>
-	<%= link_to({ action: :next_in_schedule, registration_id: registration.id }, { method: :post, class: 'btn btn-xs' }) do %>
+	<%= link_to({ action: :next_in_schedule, registration_id: registration.id }, { method: :post, class: 'btn btn-xs btn-info' }) do %>
 	<span class='glyphicon glyphicon-arrow-right'></span>
 	<% end %>
 </div>
