--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -90,6 +90,25 @@ body
 	margin-bottom:0;
 }
 
+.container-fluid {
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1024px; /* or 950px */
+}
+
+#desktop
+{
+	background-color:white;
+}
+
+@media (min-width:768px)
+{
+	#desktop
+	{
+		box-shadow:0px 3px 5px #CCC;
+	}
+}
+
 /****************************************************************************
  *  schedule column on left
  *
@@ -152,7 +171,11 @@ body
 {
 	background-color: #fff;
 	padding:2em 2em;
-	box-shadow:0px 3px 5px #CCC;
+}
+
+#content:nth-child(2)
+{
+	border-left:1px solid #E9E9E9;
 }
 
 #content header
