--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
 	<div id="desktop" class="col-sm-12">
 		<div class="row">
-			<div class="col-sm-10 col-sm-offset-1" id="content">
+			<div class="col-sm-12" id="content">
 				<%= render 'content' %>
 			</div>
 		</div>
